# shooter

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
configs/: test.toml
docker/: README.md  rpi-xcompile.Dockerfile
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: config.rs  detection.rs  main.rs  playback.rs  shoot.rs  targeting.rs
tgc/: Cargo.toml
tgc/src/: lib.rs  main.rs
tgs/: Cargo.toml
tgs/src/: detection.rs  main.rs  shoot.rs  targeting.rs
tgun/: Cargo.toml
tgun/src/: main.rs  shoot.rs  targeting.rs
tlm/: Cargo.toml
tlm/src/: lib.rs  main.rs
tlm_types/: Cargo.toml
tlm_types/src/: lib.rs
