[package]
name = "shooter"
version = "0.1.0"
edition = "2021"
description = "Human detection and shooting"
license = "Unlicense"

[dependencies]
opencv = "0.93.5"
image = "0.25.5"
minifb = "0.27.0"
clap = {version = "4.5.23", features = ["derive"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_toml = "0.0.1"
toml = "0.8.19"
url = {version = "2.4.1", features = ["serde"]}
