[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Turret gun client"
license = "Unlicense"

[[bin]]
name = "tgc"
path = "src/main.rs"

[dependencies]
# Shared telemetry and configuration code
shared = { path = "../shared" }

# Logging
log = "0.4.22"
simplelog = "0.12"

# Command line arguments
clap = {version = "4.5.26", features = ["derive"]}

# Async programming
async-std = { version = "1.13.0", features = ["attributes"] }
async-signal = "0.2.10"
futures = "0.3.31"

# For serializing telemetry data
bincode = "1.3.3"

# Unit testing
testdir = "0.9.3"
url = "2.5.4"
