[package]
name = "tgun"
version = "0.1.0"
edition = "2021"
description = "Human detection and shooting"
license = "Unlicense"

[dependencies]
# Shared telemetry and configuration code
shared = { path = "../shared" }

# Image processing
opencv = "0.93.5"
image = "0.25.5"

# Command line arguments
clap = {version = "4.5.25", features = ["derive"]}

# Signal handling
ctrlc = "3.4.5"

# Unit testing
testdir = "0.9.3"
url = "2.5.4"
