[package]
name = "tlm"
version = "0.1.0"
edition = "2021"
description = "Display live turret gun telemetry"
license = "Unlicense"

[dependencies]
# Shared telemetry and configuration code
shared = { path = "../shared" }

# Command line arguments
clap = {version = "4.5.26", features = ["derive"]}

# For deserializing telemetry data
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"

# For displaying image data
minifb = "0.27.0"
opencv = "0.94.1"

# For testing
url = "2.5.4"
